--- a/mediaquery.css
+++ b/mediaquery.css
@@ -1,9 +1,21 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+html,body{
+    height: 100%;
+    width: 100%;
+}
+
+
 body{
     background-color: aqua;
 }
-@media only sreen and (min-width:400px)and (max-width:600px){
-    body{
-background-color: red;
-}
 
-}
+@media (max-width: 600px) and (min-width: 300px){
+    body{
+        background-color: red;
+    }
+}5
