--- a/animation4box.css
+++ b/animation4box.css
@@ -5,6 +5,11 @@ background-color: rgb(127, 255, 129);
     animation-name: example;
     animation-duration: 3s;
     position: relative;
+       animation-delay: 2;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+    animation-timing-function: cubic-bezier(0.175, 0.885, 0.32, 1.275);
+
 
 }
 
@@ -14,4 +19,5 @@ background-color: rgb(127, 255, 129);
 25%{background-color: rgb(0, 255, 17);left: 300px;top: 0px;}
 50%{background-color: rgb(0, 81, 255);left: 300px;top: 300px;}
 100%{background-color: rgb(255, 153, 0);left: 0px;top:300px;}
+
 }
